Updated index and added footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: "Home"
   <div class="container col-xxl-12 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-4 col-sm-10 col-lg-4">
-	<img style="width: 20rem" src="assets/images/stsci_logo.png" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" width="700" height="500" loading="lazy">
+	<!-- <img style="width: 20rem" src="assets/images/stsci_logo.png" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" width="700" height="500" loading="lazy"> -->
 
       </div>
       <div class="col-lg-8">
@@ -28,5 +28,12 @@ title: "Home"
   On March 10, 2023, Space Telescope Science Institute invites STEM researchers, practitioners, and community members to an Accessibility Hackathon to improve the accessibility of public resources shared by STScI and other organizations in the scientific computing community. The Hackathon, held remotely, will begin with a short kickoff event to provide goals, information, and materials to participants. During the day, individuals and small teams will contribute alt text, audio descriptions, transcripts, issues, and other materials to STScI and participating organizations. Participants in the event will not only improve accessibility in scientific and research computing materials and infrastructure, but also raise awareness of critical issues related to accessibility and STEM.</span>
 </section>
 
+<section style="margin-top:3em">
 
+        <h2 class="display-6 fw-bold lh-1 mb-3">About Space Telescope Science Institute</h1>
+  <p>
+Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.
+                </p>
+
+  </section>
 
