--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 title: "Home"
 ---
 
-<section>
+<div class="sections">
+
+<section style="margin-bottom:0">
 
   <div class="container col-xxl-12 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
@@ -17,23 +19,83 @@ title: "Home"
         <p class="lead">March 10, 2023</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
-          <a href="schedule.html"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
+          <a href="#schedule"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section>
+<section id="description">
   On March 10, 2023, Space Telescope Science Institute invites STEM researchers, practitioners, and community members to an Accessibility Hackathon to improve the accessibility of public resources shared by STScI and other organizations in the scientific computing community. The Hackathon, held remotely, will begin with a short kickoff event to provide goals, information, and materials to participants. During the day, individuals and small teams will contribute alt text, audio descriptions, transcripts, issues, and other materials to STScI and participating organizations. Participants in the event will not only improve accessibility in scientific and research computing materials and infrastructure, but also raise awareness of critical issues related to accessibility and STEM.</span>
 </section>
 
-<section style="margin-top:3em">
+<section id="schedule">
 
-        <h2 class="display-6 fw-bold lh-1 mb-3">About Space Telescope Science Institute</h1>
-  <p>
-Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.
-                </p>
+  <h2 class="display-6 fw-bold lh-1 mb-3">Schedule</h2>
+
+<table class="table">
+
+  <thead>
+    <tr>
+      <th scope="col">Time (Eastern)</th>
+      <th scope="col">Session</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>10:00</td>
+      <td>Welcome</td>
+    </tr>
+    <tr>
+      <td>10:15</td>
+      <td>Best Practices for Accessible Notebooks</td>
+    </tr>
+    <tr>
+      <td>11:00</td>
+      <td>Breakout: Test Your Notebooks</td>
+    </tr>	
+    <tr>
+      <td>12:00</td>
+      <td>Check in and Discussion</td>
+    </tr>
+    <tr>
+      <td>12:20</td>
+      <td>Wrap-up</td>
+    </tr>
+    <tr>
+      <td>12:30</td>
+      <td>Conclusion</td>
+    </tr>	
+  </tbody>
+</table>
+
 
   </section>
 
+
+
+<section style="margin-top:3em">
+
+  <div class="container">
+    <div class="row align-items-center">
+    <div class="col-md-6">
+      <h2 class="display-6 fw-bold lh-1 mb-3">About STScI</h2>
+  <p>
+    Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.<a href="https://www.stsci.edu/
+">Read more</a></p>
+  </p>
+    </div>
+    <div class="col-md-6">
+      <h2 class="display-6 fw-bold lh-1 mb-3">Notebooks for All</h2>      
+      <p>
+	In 2022-2023, Space Telescope Science Institute is taking steps to make scientific outputs, and especially Jupyter notebooks, more accessible for people with disabilities. <a href="https://github.com/Iota-School/notebooks-for-all">Read more</a>
+	</p>
+
+
+    </div>
+    </div>
+
+
+  </section>
+</div>
