Removed nav and added contact to main page

--- a/index.html
+++ b/index.html
@@ -97,5 +97,12 @@ title: "Home"
     </div>
 
 
-  </section>
+</section>
+
+<section>
+  
+  <h2 class="display-6 fw-bold lh-1 mb-3">Contact</h2>      
+For questions about the event, please reach out to Jennifer Kotler at jkotler@stsci.edu and/or Patrick Smyth at patrick@iotaschool.com.
+
+
 </div>
