Update with suggested fixes from Jen

--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@ title: "Home"
 
       </div>
       <div class="col-lg-8">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Accessibility Hackathon</h1>
-        <p class="lead">Space Telescope Science Institute</p>
-        <p class="lead">March 10, 2023</p>
+        <h1 class="display-5 fw-bold lh-1 mb-3">
+	  Accessible notebooks Hackathon
+	</h1>	  
+
+
+        <p class="lead">Hosted by Space Telescope Science Institute</p>
+        <p class="lead">Date: March 10, 2023</p>
+        <p class="lead">Time: 10:00 EST - 12:30 EST</p>
+        <p class="lead">Location: Remote</p>		
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
+          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
           <a href="#schedule"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
         </div>
       </div>
@@ -27,7 +33,15 @@ title: "Home"
 </section>
 
 <section id="description">
-  On March 10, 2023, Space Telescope Science Institute invites STEM researchers, practitioners, and community members to an Accessibility Hackathon to improve the accessibility of public resources shared by STScI and other organizations in the scientific computing community. The Hackathon, held remotely, will begin with a short kickoff event to provide goals, information, and materials to participants. During the day, individuals and small teams will contribute alt text, audio descriptions, transcripts, issues, and other materials to STScI and participating organizations. Participants in the event will not only improve accessibility in scientific and research computing materials and infrastructure, but also raise awareness of critical issues related to accessibility and STEM.</span>
+<p>
+  Do you create and share Jupyter notebooks as part of your research? Have you ever considered that your notebooks might not be accessible to people who use screenreaders or magnification tools when coding? Many notebooks do not play well with assistive tech—but yours can!
+</p>
+ <p>
+   Bring a notebook, or grab one of the notebooks provided by Space Telescope Science Institute. We will open with a presentation to share practical tips and tricks for making your notebook more accessible. We will spend about one hour hacking on our notebooks before sharing our results with the group.
+ </p>
+
+ <p>The hackathon will be held remotely—please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform">sign up</a> to receive a link. If you’re located near Baltimore a smaller group will be hacking in the <a target="_blank" href="https://krieger.jhu.edu/singleton/venue/steven-muller-building-space-telescope-auditorium-3700-san-martin-dr/">Muller building</a> on Hopkins campus. Make sure to indicate that you're in the Baltimore area on signup to receive further information</p>
+
 </section>
 
 <section id="schedule">
@@ -57,7 +71,7 @@ title: "Home"
     </tr>	
     <tr>
       <td>12:00</td>
-      <td>Check in and Discussion</td>
+      <td>Reporting Results and Post-Hack Discussion</td>
     </tr>
     <tr>
       <td>12:20</td>
@@ -65,7 +79,7 @@ title: "Home"
     </tr>
     <tr>
       <td>12:30</td>
-      <td>Conclusion</td>
+      <td>Event Ends</td>
     </tr>	
   </tbody>
 </table>
@@ -75,21 +89,21 @@ title: "Home"
 
 
 
-<section style="margin-top:3em">
+<section>
 
-  <div class="container">
-    <div class="row align-items-center">
+  <div style="margin:0;padding:0" class="container">
+    <div class="row align-items-left">
     <div class="col-md-6">
       <h2 class="display-6 fw-bold lh-1 mb-3">About STScI</h2>
   <p>
-    Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.<a href="https://www.stsci.edu/
+    Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.<a target="_blank" href="https://www.stsci.edu/
 ">Read more</a></p>
   </p>
     </div>
     <div class="col-md-6">
       <h2 class="display-6 fw-bold lh-1 mb-3">Notebooks for All</h2>      
       <p>
-	In 2022-2023, Space Telescope Science Institute is taking steps to make scientific outputs, and especially Jupyter notebooks, more accessible for people with disabilities. <a href="https://github.com/Iota-School/notebooks-for-all">Read more</a>
+	In 2022-2023, Space Telescope Science Institute is taking steps to make scientific outputs, and especially Jupyter notebooks, more accessible for people with disabilities. <a target="_blank" href="https://github.com/Iota-School/notebooks-for-all">Read more</a>
 	</p>
 
 
