Added spaces, capitalized title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: "Home"
       </div>
       <div class="col-lg-8">
         <h1 class="display-5 fw-bold lh-1 mb-3">
-	  Accessible notebooks Hackathon
+	  Accessible Notebooks Hackathon
 	</h1>	  
 
 
@@ -96,14 +96,14 @@ title: "Home"
     <div class="col-md-6">
       <h2 class="display-6 fw-bold lh-1 mb-3">About STScI</h2>
   <p>
-    Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.<a target="_blank" href="https://www.stsci.edu/
+    Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.&nbsp &nbsp<a target="_blank" href="https://www.stsci.edu/
 ">Read more</a></p>
   </p>
     </div>
     <div class="col-md-6">
       <h2 class="display-6 fw-bold lh-1 mb-3">Notebooks for All</h2>      
       <p>
-	In 2022-2023, Space Telescope Science Institute is taking steps to make scientific outputs, and especially Jupyter notebooks, more accessible for people with disabilities. <a target="_blank" href="https://github.com/Iota-School/notebooks-for-all">Read more</a>
+	In 2022-2023, Space Telescope Science Institute is taking steps to make scientific outputs, and especially Jupyter notebooks, more accessible for people with disabilities.  &nbsp&nbsp<a target="_blank" href="https://github.com/Iota-School/notebooks-for-all">Read more</a>
 	</p>
 
 
