--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ title: "Home"
    Bring a notebook, or grab one of the <a target="_blank" href="https://spacetelescope.github.io/notebook-infrastructure/"> notebooks provided by Space Telescope Science Institute</a>. We will open with a presentation to share practical tips and tricks for making your notebook more accessible. We will spend about one hour hacking on our notebooks before sharing our results with the group.
  </p>
 
- <p>The hackathon will be held remotely—please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform">sign up</a> to receive a link. If you’re located near Baltimore a smaller group will be hacking in the <a target="_blank" href="https://krieger.jhu.edu/singleton/venue/steven-muller-building-space-telescope-auditorium-3700-san-martin-dr/">Muller building</a> on Hopkins campus. Make sure to indicate that you're in the Baltimore area on signup to receive further information</p>
+ <p>The hackathon will be held remotely—please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform">sign up</a> to receive a link. If you’re located near Baltimore a smaller group will be hacking in the <a target="_blank" href="https://krieger.jhu.edu/singleton/venue/steven-muller-building-space-telescope-auditorium-3700-san-martin-dr/">Muller building</a> on Hopkins campus. If you want to join in person, indicate that on the signup to receive further information.
+</p>
 
 </section>
 
