--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: "Home"
       </div>
       <div class="col-lg-8">
         <h1 class="display-5 fw-bold lh-1 mb-3">
-	  Accessible Notebooks Hackathon
+	  Day of Accessibility
 	</h1>	  
 
 
