Changed index page for day of accessibility, no bullets on lists in schedule

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ title: "Home"
 
 
         <p class="lead">Hosted by Space Telescope Science Institute</p>
-        <p class="lead">Date: March 10, 2023</p>
-        <p class="lead">Time: 10:00 EST - 12:30 EST</p>
-        <p class="lead">Location: Remote</p>		
+        <p class="lead">Date: April 13, 2023</p>
+        <p class="lead">Time: 10:00 AM EST - 4:00 PM EST</p>
+        <p class="lead">Location: Space Telescope Science Institute</p>		
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
+          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
           <a href="#schedule"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
         </div>
       </div>
@@ -34,14 +34,12 @@ title: "Home"
 
 <section id="description">
 <p>
-  Do you create and share Jupyter notebooks as part of your research? Have you ever considered that your notebooks might not be accessible to people who use screenreaders or magnification tools when coding? Many notebooks do not play well with assistive tech—but yours can!
+  STScI's mission includes bringing science to the world, a world which includes people with disabilities. In this day-long event, participants will engage with the challenges around making STEM accessible and inclusive. Attendees will hear about ongoing efforts toward greater accessibility at STScI, including accessible notbook and telescope image initiatives, and will work hands-on to learn fundamentals of how blind and visually impaired individuals use technology. Participants will also hear from <a href="https://www.macfound.org/fellows/class-of-2021/joshua-miele#searchresults">Joshua Miele</a>, a <a href="https://www.macfound.org/programs/fellows/">McArthur Fellowship</a> (Genius Grant) recipient and leader in adaptive technology design. Those attending the event will leave more informed about challenges in STEM and accessibility, and will be more prepared to be accessibility leaders and advocates in their work and research.
 </p>
- <p>
-   Bring a notebook, or grab one of the <a target="_blank" href="https://spacetelescope.github.io/notebook-infrastructure/"> notebooks provided by Space Telescope Science Institute</a>. We will open with a presentation to share practical tips and tricks for making your notebook more accessible. We will spend about one hour hacking on our notebooks before sharing our results with the group.
- </p>
+<p>
+  The Day of Accessibility will take place from 10:00 AM to 4:00 PM Eastern at Space Telescope Science Institute in Baltimore. Registrations will close on Thursday, March 23rd, and seats may be limited.
+</p>
 
- <p>The hackathon will be held remotely—please <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeMMkmeo9KTJor5i5XGhYZzn5GnrmYJ8TEw5Oq1aFK_3hdAxg/viewform">sign up</a> to receive a link. If you’re located near Baltimore a smaller group will be hacking in the <a target="_blank" href="https://krieger.jhu.edu/singleton/venue/steven-muller-building-space-telescope-auditorium-3700-san-martin-dr/">Muller building</a> on Hopkins campus. If you want to join in person, indicate that on the signup to receive further information.
-</p>
 
 </section>
 
@@ -59,29 +57,63 @@ title: "Home"
   </thead>
   <tbody>
     <tr>
+      <td>9:30 AM</td>
+      <td>Coffee and Welcome</td>
+    </tr>
+    <tr>
       <td>10:00</td>
-      <td>Welcome</td>
+      <td>
+	<ul>
+	  <li>
+	  Introduction
+	  </li>
+	  <li>
+	Overview
+	  </li>
+	  <li>
+	Accessibility Initiatives at STScI
+	  </li>
+	</ul>	
+    </tr>
+    
     </tr>
     <tr>
-      <td>10:15</td>
-      <td>Best Practices for Accessible Notebooks</td>
+      <td>10:45 AM</td>
+      <td>Accessible Text Descriptions at James Webb</td>
     </tr>
     <tr>
-      <td>11:00</td>
-      <td>Breakout: Test Your Notebooks</td>
-    </tr>	
-    <tr>
-      <td>12:00</td>
-      <td>Reporting Results and Post-Hack Discussion</td>
+      <td>11:30 AM</td>
+      <td>Coffee Break</td>
     </tr>
     <tr>
-      <td>12:20</td>
-      <td>Wrap-up</td>
+      <td>12:00 PM</td>
+      <td>Keynote by Joshua Miele</td>
+    </tr>
+      <td>1:00 PM</td>
+      <td>Lunch</td>
     </tr>
     <tr>
-      <td>12:30</td>
-      <td>Event Ends</td>
-    </tr>	
+      <td>2:00 PM</td>
+      <td>Interactive Session: Learn to Use a Screen Reader</td>
+    </tr>
+    <tr>
+      <td>3:30 PM</td>
+      <td>
+	<ul>
+	  <li>
+	    Being an Advocate
+	  </li>
+	  <li>
+	    Next Steps
+	  </li>
+	</ul>
+</td>
+    </tr>
+    <tr>
+      <td>4:00 PM</td>
+      <td>Event end</td>
+    </tr>
+    
   </tbody>
 </table>
 
