--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: "Home"
 
 <section id="description">
 <p>
-  STScI's mission includes bringing science to the world, a world which includes people with disabilities. In this day-long event, participants will engage with the challenges around making STEM accessible and inclusive. Attendees will hear about ongoing efforts toward greater accessibility at STScI, including accessible notbook and telescope image initiatives, and will work hands-on to learn fundamentals of how blind and visually impaired individuals use technology. Participants will also hear from <a href="https://www.macfound.org/fellows/class-of-2021/joshua-miele#searchresults">Joshua Miele</a>, a <a href="https://www.macfound.org/programs/fellows/">McArthur Fellowship</a> (Genius Grant) recipient and leader in adaptive technology design. Those attending the event will leave more informed about challenges in STEM and accessibility, and will be more prepared to be accessibility leaders and advocates in their work and research.
+  STScI's mission includes bringing science to the world, a world which includes people with disabilities. In this day-long event, participants will engage with the challenges around making STEM accessible and inclusive. Attendees will hear about ongoing efforts toward greater accessibility at STScI, including accessible notbook and telescope image initiatives, and will work hands-on to learn fundamentals of how blind and visually impaired individuals use technology. Participants will also hear from <a href="https://www.macfound.org/fellows/class-of-2021/joshua-miele#searchresults">Joshua Miele</a>, a McArthur Fellowship (Genius Grant) recipient and leader in adaptive technology design. Those attending the event will leave more informed about challenges in STEM and accessibility, and will be more prepared to be accessibility leaders and advocates in their work and research.
 </p>
 <p>
   The Day of Accessibility will take place from 10:00 AM to 4:00 PM Eastern at Space Telescope Science Institute in Baltimore. Registrations will close on Thursday, March 23rd, and seats may be limited.
@@ -61,7 +61,7 @@ title: "Home"
       <td>Coffee and Welcome</td>
     </tr>
     <tr>
-      <td>10:00</td>
+      <td>10:00 AM</td>
       <td>
 	<ul>
 	  <li>
