--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: "Home"
 
 <section style="margin-bottom:0">
 
-  <div class="container col-xxl-12 px-4 py-5">
+  <div class="container col-xxl-12 px-4 ">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-4 col-sm-10 col-lg-4">
 	<!-- <img style="width: 20rem" src="assets/images/stsci_logo.png" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" width="700" height="500" loading="lazy"> -->
@@ -19,10 +19,22 @@ title: "Home"
 	</h1>	  
 
 
-        <p class="lead">Hosted by Space Telescope Science Institute</p>
+        <p class="lead">
+	  Hosted by Space Telescope Science Institute
+</p>
         <p class="lead">Date: April 13, 2023</p>
-        <p class="lead">Time: 10:00 AM EST - 4:00 PM EST</p>
-        <p class="lead">Location: Space Telescope Science Institute</p>		
+        <p class="lead">
+	  Time: 10:00 AM EST - 4:00 PM EST
+	  </p>
+        <p class="lead">
+	  Location: Space Telescope Science Institute, Muller Building, Bahcall Auditorium
+	</p>
+	<p>
+	  Free and open to the public. Registration required.
+	</p>
+	<p>
+	  Breakfast & lunch provided.
+	</p>	
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
           <a href="#schedule"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
@@ -33,13 +45,18 @@ title: "Home"
 </section>
 
 <section id="description">
-<p>
-  STScI's mission includes bringing science to the world, a world which includes people with disabilities. In this day-long event, participants will engage with the challenges around making STEM accessible and inclusive. Attendees will hear about ongoing efforts toward greater accessibility at STScI, including accessible notbook and telescope image initiatives, and will work hands-on to learn fundamentals of how blind and visually impaired individuals use technology. Participants will also hear from <a href="https://www.macfound.org/fellows/class-of-2021/joshua-miele#searchresults">Joshua Miele</a>, a McArthur Fellowship (Genius Grant) recipient and leader in adaptive technology design. Those attending the event will leave more informed about challenges in STEM and accessibility, and will be more prepared to be accessibility leaders and advocates in their work and research.
-</p>
-<p>
-  The Day of Accessibility will take place from 10:00 AM to 4:00 PM Eastern at Space Telescope Science Institute in Baltimore. Registrations will close on Thursday, March 23rd, and seats may be limited.
-</p>
-
+  <p>
+    Space Telescope Science Institute’s mission is to share cutting-edge astronomy with the world. To achieve this, we must remember that the world includes people with disabilities: both scientists and the general public. During the Day of Accessibility, you will engage with the challenges around making science and technology inclusive.
+  </p>
+  <p>
+    Learn about accessibility efforts at STScI, focusing on alt text, Jupyter Notebooks, and data sonification. We will also hear from our keynote speaker Joshua Miele: a McArthur fellow and leader in adaptive technology design. Participate in hands-on workshops to learn the fundamentals of how blind and visually impaired individuals access tech using screen readers. Attendees will leave informed about accessibility challenges in STEM, and will be prepared to act as accessibility advocates in their work.
+  </p>
+  <p>
+    The Day of Accessibility is free and open to the public, but you must <a target="_blank" href=https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform?usp=sf_link">register</a> to attend. The event will take place in person in Baltimore at the Space Telescope Science Institute from 10:00 AM to 4:30 PM EST. Registration will close on April 6th, seats may be limited.
+  </p>
+  <p>
+    Can’t attend the full day? Joshua Miele’s keynote will be open for non-attendees and streamed. <a href="https://docs.google.com/forms/d/e/1FAIpQLScQ8IaOZpNJYWuySXqsX11F_N5t3XR96Pkjx-jcS1imW2G8Ew/viewform?usp=sf_link">Sign up</a> to receive a link to view remotely. This site will be updated with a link to the stream closer to the event. Slides for all talks will be posted ahead of time on the schedule.
+  </p>
 
 </section>
 
@@ -53,12 +70,18 @@ title: "Home"
     <tr>
       <th scope="col">Time (Eastern)</th>
       <th scope="col">Session</th>
+      <th scope="col">Description</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>9:30 AM</td>
-      <td>Coffee and Welcome</td>
+      <td>
+	    Coffee and Welcome
+      </td>
+      <td>
+	Find your seats and meet other participants while enjoying coffee and pastries from Carma’s Cafe.
+      </td>
     </tr>
     <tr>
       <td>10:00 AM</td>
@@ -68,33 +91,71 @@ title: "Home"
 	  Introduction
 	  </li>
 	  <li>
-	Overview
+	Overview and Schedule
 	  </li>
-	  <li>
-	Accessibility Initiatives at STScI
-	  </li>
-	</ul>	
+	</ul>
+      </td>
+      <td>
+	A short introduction to the event, including overview and schedule.
+      </td>
     </tr>
-    
+    <tr>
+      <td>
+	10:10 AM
+      </td>
+      <td>
+	Notebooks for All
+      </td>
+      <td>
+	Presentation from <a href="https://github.com/Iota-School/notebooks-for-all">Notebooks for All</a>, an STScI initiative to make Jupyter Notebook outputs more accessible.
+      </td>
+      
     </tr>
     <tr>
       <td>10:45 AM</td>
-      <td>Accessible Text Descriptions at James Webb</td>
+      <td>
+	Illuminating the Universe with Accessible Text Descriptions
+      </td>
+      <td>
+	Presentation from the team that developed accessible descriptions for the initial observations from the James Webb space telescope.
+      </td>
     </tr>
     <tr>
       <td>11:30 AM</td>
       <td>Coffee Break</td>
+      <td>
+	Break with coffee served from Carma’s Cafe.
+      </td>	
     </tr>
     <tr>
       <td>12:00 PM</td>
       <td>Keynote by Joshua Miele</td>
+      <td>
+	Keynote presentation by <a target="_blank" href="https://www.macfound.org/fellows/class-of-2021/joshua-miele#searchresults">Joshua Miele</a>, McArthur Fellowship (Genius Grant) recipient and leader in adaptive technology design.
+      </td>
     </tr>
       <td>1:00 PM</td>
       <td>Lunch</td>
+      <td>
+	Sandwiches and snacks provided at Carma’s Cafe, located inside the Muller Building
+      </td>
     </tr>
     <tr>
       <td>2:00 PM</td>
-      <td>Interactive Session: Learn to Use a Screen Reader</td>
+      <td>
+	Astronomy Data Sonification with Astronify
+      </td>
+      <td>
+	Presentation from the team behind <a href="https://astronify.readthedocs.io/en/latest/">Astronify</a>, a Python package for turning telescope observations into sound. The presentation will include an interactive sonification game show.
+      </td>
+    </tr>
+
+    <tr>
+      <td>2:45 PM</td>
+      <td>Learn to Use a Screen Reader</td>
+      <td>
+	Interactive session on <a href="https://iotaschool.com/resource/sequence/u/patrick/s/screen-reader-fundamentals-with-voiceover-on-ios">learning to use a screen reader</a> by Patrick Smyth at <a href="https://iotaschool.com/">Iota School.</a>.
+      </td>
     </tr>
     <tr>
       <td>3:30 PM</td>
@@ -107,7 +168,10 @@ title: "Home"
 	    Next Steps
 	  </li>
 	</ul>
-</td>
+      </td>
+      <td>
+	Concluding session on how to be an advocate and next steps on your accessibility journey.
+      </td>
     </tr>
     <tr>
       <td>4:00 PM</td>
@@ -134,9 +198,9 @@ title: "Home"
   </p>
     </div>
     <div class="col-md-6">
-      <h2 class="display-6 fw-bold lh-1 mb-3">Notebooks for All</h2>      
+      <h2 class="display-6 fw-bold lh-1 mb-3">Notebooks for All</h2>
       <p>
-	In 2022-2023, Space Telescope Science Institute is taking steps to make scientific outputs, and especially Jupyter notebooks, more accessible for people with disabilities.  &nbsp&nbsp<a target="_blank" href="https://github.com/Iota-School/notebooks-for-all">Read more</a>
+	This event is organized by the Notebooks for All initiative. In 2022-2023, Space Telescope Science Institute is taking steps to make scientific outputs, and especially Jupyter notebooks, more accessible for people with disabilities. &nbsp&nbsp <a target="_blank" href="https://github.com/Iota-School/notebooks-for-all">Read more</a>
 	</p>
 
 
