Added hypens, periods in schedule

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ title: "Home"
       <td>1:00 PM</td>
       <td>Lunch</td>
       <td>
-	Sandwiches and snacks provided at Carma’s Cafe, located inside the Muller Building
+	Sandwiches and snacks provided at Carma’s Cafe, located inside the Muller Building.
       </td>
     </tr>
     <tr>
@@ -137,7 +137,7 @@ title: "Home"
       </td>
       <td>
 	Presentation about  <a target="_blank" href="https://astronify.readthedocs.io/en/latest/
-">Astronify</a>, a Python package for turning telescope observations into sound. Test your listening skills with an interactive sonification game show. - Scott Fleming & Jenn Kotler
+">Astronify</a>, a Python package for turning telescope observations into sound. Test your listening skills with an interactive sonification game show - Scott Fleming & Jenn Kotler
       </td>
     </tr>
 
@@ -145,7 +145,7 @@ title: "Home"
       <td>2:45 PM</td>
       <td>Learn to Use a Screen Reader</td>
       <td>
-	Interactive session on <a target="_blank" href="https://iotaschool.com/resource/sequence/u/patrick/s/screen-reader-fundamentals-with-voiceover-on-ios">learning to use a screen reader</a> by Patrick Smyth at <a target="_blank" href="https://iotaschool.com/">Iota School</a>.
+	Interactive session on <a target="_blank" href="https://iotaschool.com/resource/sequence/u/patrick/s/screen-reader-fundamentals-with-voiceover-on-ios">learning to use a screen reader</a> - Patrick Smyth, <a target="_blank" href="https://iotaschool.com/">Iota School</a>.
       </td>
     </tr>
     <tr>
