Changed column header

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ title: "Home"
 
   <thead>
     <tr>
-      <th scope="col">Time (EST)</th>
+      <th scope="col">Time (Eastern)</th>
       <th scope="col">Session</th>
       <th scope="col">Description</th>
     </tr>
