Added note about tactile graphics and note on recordings

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ title: "Home"
   <p>
     Can’t attend the full day? Joshua Miele’s keynote will be open for non-attendees and streamed. If you'd like to attend the keynote remotely, please select the "Keynote only (remote)" option when <a href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform" target="_blank">signing up</a>. This site will be updated with a link to the stream closer to the event. Slides for all talks will be posted ahead of time on the schedule.
   </p>
+  <p>
+    Sessions will be recorded. If you would like to receive recordings after the event, <a href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform" target="_blank">register for the event</a> and select the option to attend the keynote remotely.
+  </p>
+
 
 </section>
 
@@ -127,7 +131,8 @@ title: "Home"
       <td>1:00 PM</td>
       <td>Lunch</td>
       <td>
-	Sandwiches and snacks provided at Carma’s Cafe, located inside the Muller Building.
+	Sandwiches and snacks provided at Carma’s Cafe, located inside the Muller Building. View 3-dimensional tactile graphics of telescope imagery in the café and lobby.
+
       </td>
     </tr>
     <tr>
