McArthur to MacArthur

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: "Home"
     Space Telescope Science Institute’s mission is to share cutting-edge astronomy with the world. To achieve this, we must remember that the world includes people with disabilities: both scientists and the general public. During the Day of Accessibility, you will engage with the challenges around making science and technology inclusive.
   </p>
   <p>
-    Learn about accessibility efforts at STScI focusing on alt text, Jupyter Notebooks, and data sonification. We will also hear from our keynote speaker Joshua Miele: a McArthur fellow and leader in adaptive technology design. Participate in hands-on workshops to learn the fundamentals of how blind and visually impaired individuals access tech using screen readers. Attendees will leave informed about accessibility challenges in STEM, and will be prepared to act as accessibility advocates in their work.
+    Learn about accessibility efforts at STScI focusing on alt text, Jupyter Notebooks, and data sonification. We will also hear from our keynote speaker Joshua Miele: a MacArthur fellow and leader in adaptive technology design. Participate in hands-on workshops to learn the fundamentals of how blind and visually impaired individuals access tech using screen readers. Attendees will leave informed about accessibility challenges in STEM, and will be prepared to act as accessibility advocates in their work.
   </p>
   <p>
     The Day of Accessibility is free and open to the public, but you must <a target="_blank" href=https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform?usp=sf_link">register</a> to attend. The event will take place in person in Baltimore at the Space Telescope Science Institute from 10:00 AM to 4:30 PM EST. Registration will close on April 6th, seats may be limited.
@@ -125,7 +125,7 @@ title: "Home"
       <td>12:00 PM</td>
       <td>Keynote by Joshua Miele</td>
       <td>
-	Keynote presentation by <a href="https://www.macfound.org/fellows/class-of-2021/joshua-miele#searchresults" target="_blank">Joshua Miele</a>, McArthur Fellow and leader in adaptive technology design.
+	Keynote presentation by <a href="https://www.macfound.org/fellows/class-of-2021/joshua-miele#searchresults" target="_blank">Joshua Miele</a>, MacArthur Fellow and leader in adaptive technology design.
       </td>
     </tr>
       <td>1:00 PM</td>
