Updated with new info related to streaming

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@ title: "Home"
     The Day of Accessibility is free and open to the public, but you must <a target="_blank" href=https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform?usp=sf_link">register</a> to attend. The event will take place in person in Baltimore at the Space Telescope Science Institute from 10:00 AM to 4:30 PM EST. Registration will close on April 6th, seats may be limited.
   </p>
   <p>
-    Can’t attend the full day? Joshua Miele’s keynote will be open for non-attendees and streamed. If you'd like to attend the keynote remotely, please select the "Keynote only (remote)" option when <a href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform" target="_blank">signing up</a>. This site will be updated with a link to the stream closer to the event. Slides for all talks will be posted ahead of time on the schedule.
+    Are you near Baltimore, but can't attend the full day? When <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform">registering</a>, select the "Keynote only" option to indicate that you will attend only the session by Joshua Miele at 12:00.
   </p>
   <p>
-    Sessions will be recorded. If you would like to receive recordings after the event, <a href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform" target="_blank">register for the event</a> and select the option to attend the keynote remotely.
+    While this is not primarily a remote event, all sessions will be streamed and recorded. If you would like to receive a link to view the stream, please select the "I would like to receive a link to stream the event" option when <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform">registering</a>. This site will be updated with a link to the stream closer to the event.
   </p>
-
+  <p>
+    Sessions will be recorded and shared with all registrants after the event.
+  </p>
 
 </section>
 
