--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@ title: "Home"
     Sessions will be recorded and shared with all registrants after the event.
   </p>
 
+ <p>
+   Participants at the Day of Accessibility will be expected to follow the <a target="_blank" href="https://www.stsci.edu/opportunities/our-work/our-culture/diversity-equity-and-inclusion/code-of-conduct">STScI Code of Conduct</a>.
+ </p>
+
+
 </section>
 
 <section id="schedule">
