Added additional coffee break

--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@ title: "Home"
     </tr>
     <tr>
       <td>10:45 AM</td>
+      <td>Coffee Break</td>
+      <td>
+	Break with coffee served from Carma’s Cafe.
+      </td>	
+    </tr>
+
+    <tr>
+      <td>11:00 AM</td>
       <td>
 	Illuminating the Universe with Accessible Text Descriptions
       </td>
@@ -122,7 +130,7 @@ title: "Home"
       </td>
     </tr>
     <tr>
-      <td>11:30 AM</td>
+      <td>11:45 AM</td>
       <td>Coffee Break</td>
       <td>
 	Break with coffee served from Carma’s Cafe.
