Changed break names and descriptions

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ title: "Home"
     <tr>
       <td>9:30 AM</td>
       <td>
-	    Coffee
+	Coffee
       </td>
       <td>
 	Find your seats and meet other participants while enjoying coffee and pastries from Carma’s Cafe.
@@ -114,9 +114,9 @@ title: "Home"
     </tr>
     <tr>
       <td>10:45 AM</td>
-      <td>Coffee Break</td>
+      <td>Break</td>
       <td>
-	Break with coffee served from Carma’s Cafe.
+
       </td>	
     </tr>
 
@@ -131,9 +131,9 @@ title: "Home"
     </tr>
     <tr>
       <td>11:45 AM</td>
-      <td>Coffee Break</td>
+      <td>Break</td>
       <td>
-	Break with coffee served from Carma’s Cafe.
+
       </td>	
     </tr>
     <tr>
