Added travel info to main page

--- a/index.html
+++ b/index.html
@@ -61,10 +61,18 @@ title: "Home"
     Sessions will be recorded and shared with all registrants after the event.
   </p>
 
+<p>
+  For those attending in person, the 
+  <a href="https://www.google.com/maps/place/Space+Telescope+Science+Institute/@39.3327458,-76.6255556,17z/data=!3m1!4b1!4m6!3m5!1s0x89c8052125fc4f7b:0xcf811ae53d5f8d2b!8m2!3d39.3327417!4d-76.6233669!16s%2Fg%2F1yp1b9fkm?coh=164777&entry=tt&shorturl=1" target="-blank">
+    Muller Building is located at 3700 San Martin Drive, Baltimore, MD 21218</a>.
+  For more information on how to get here, please review 
+  <a href="https://www.stsci.edu/contact-us/getting-here" target="-blank">
+    this page on travel and parking</a>.
+</p>
+
  <p>
    Participants at the Day of Accessibility will be expected to follow the <a target="_blank" href="https://www.stsci.edu/opportunities/our-work/our-culture/diversity-equity-and-inclusion/code-of-conduct">STScI Code of Conduct</a>.
  </p>
-
 
 </section>
 
