Add headings to description

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@ title: "Home"
   <p>
     Are you near Baltimore, but can't attend the full day? When <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform">registering</a>, select the "Keynote only" option to indicate that you will attend only the session by Joshua Miele at 12:00.
   </p>
+
+  <h2 class="lead">Event Recording</h2>
+
   <p>
     While this is not primarily a remote event, all sessions will be streamed and recorded. If you would like to receive a link to view the stream, please select the "I would like to receive a link to stream the event" option when <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform">registering</a>. This site will be updated with a link to the stream closer to the event.
   </p>
@@ -61,6 +64,8 @@ title: "Home"
     Sessions will be recorded and shared with all registrants after the event.
   </p>
 
+
+<h2 class="lead">Travel & Parking</h2>
 <p>
   For those attending in person, the 
   <a href="https://www.google.com/maps/place/Space+Telescope+Science+Institute/@39.3327458,-76.6255556,17z/data=!3m1!4b1!4m6!3m5!1s0x89c8052125fc4f7b:0xcf811ae53d5f8d2b!8m2!3d39.3327417!4d-76.6233669!16s%2Fg%2F1yp1b9fkm?coh=164777&entry=tt&shorturl=1" target="-blank">
@@ -70,6 +75,7 @@ title: "Home"
     this page on travel and parking</a>.
 </p>
 
+<h2 class="lead">Code of Conduct</h2>
  <p>
    Participants at the Day of Accessibility will be expected to follow the <a target="_blank" href="https://www.stsci.edu/opportunities/our-work/our-culture/diversity-equity-and-inclusion/code-of-conduct">STScI Code of Conduct</a>.
  </p>
