Added streaming link to description

--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@ title: "Home"
 
 <section id="description">
   <p>
+    Event registration for the Day of Accessibility is now closed. However, the event can be streamed starting at 10 am EST with the below information:
+  </p>
+  
+  <ul>
+<li>
+<span class="fw-bold">  Streaming Link</span>: <a href="https://stsci.webex.com/stsci/j.php?MTID=m2b06a82b2fe90b115124c2c8d6d6e39b">https://stsci.webex.com/stsci/j.php?MTID=m2b06a82b2fe90b115124c2c8d6d6e39b</a>
+  </li>
+
+<li>
+  <span class="fw-bold">Webinar password</span>: accessibility
+  </li>
+<li>
+<span class="fw-bold">  Join by phone</span>: +1-510-210-8882 USA toll
+  </li>
+<li>
+<span class="fw-bold">  Webinar number</span>: 2762 461 5618
+  </li>
+<li>
+<span class="fw-bold">  Access code</span>: 276 246 15618
+  </li>
+</ul>    
+  <p>
     Space Telescope Science Institute’s mission is to share cutting-edge astronomy with the world. To achieve this, we must remember that the world includes people with disabilities: both scientists and the general public. During the Day of Accessibility, you will engage with the challenges around making science and technology inclusive.
   </p>
   <p>
@@ -55,7 +77,7 @@ title: "Home"
     Are you near Baltimore, but can't attend the full day? When <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform">registering</a>, select the "Keynote only" option to indicate that you will attend only the session by Joshua Miele at 12:00.
   </p>
 
-  <h2 class="lead">Event Recording</h2>
+  <h2 class="lead fw-bold">Event Recording</h2>
 
   <p>
     While this is not primarily a remote event, all sessions will be streamed and recorded. If you would like to receive a link to view the stream, please select the "I would like to receive a link to stream the event" option when <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform">registering</a>. This site will be updated with a link to the stream closer to the event.
@@ -65,7 +87,7 @@ title: "Home"
   </p>
 
 
-<h2 class="lead">Travel & Parking</h2>
+<h2 class="lead fw-bold">Travel & Parking</h2>
 <p>
   For those attending in person, the 
   <a href="https://www.google.com/maps/place/Space+Telescope+Science+Institute/@39.3327458,-76.6255556,17z/data=!3m1!4b1!4m6!3m5!1s0x89c8052125fc4f7b:0xcf811ae53d5f8d2b!8m2!3d39.3327417!4d-76.6233669!16s%2Fg%2F1yp1b9fkm?coh=164777&entry=tt&shorturl=1" target="-blank">
@@ -75,7 +97,7 @@ title: "Home"
     this page on travel and parking</a>.
 </p>
 
-<h2 class="lead">Code of Conduct</h2>
+<h2 class="lead fw-bold">Code of Conduct</h2>
  <p>
    Participants at the Day of Accessibility will be expected to follow the <a target="_blank" href="https://www.stsci.edu/opportunities/our-work/our-culture/diversity-equity-and-inclusion/code-of-conduct">STScI Code of Conduct</a>.
  </p>
@@ -171,7 +193,7 @@ title: "Home"
       </td>
       <td>
 	Presentation about  <a target="_blank" href="https://astronify.readthedocs.io/en/latest/
-">Astronify</a>, a Python package for turning telescope observations into sound. Test your listening skills with an interactive sonification game show - Scott Fleming & Jenn Kotler
+">Astronify</a>, a Python package for turning telescope observations into sound. Test your listening skills with an interactive sonification game show - Scott Fleming
       </td>
     </tr>
 
