Added heading for event description

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ title: "Home"
 <span class="fw-bold">  Access code</span>: 276 246 15618
   </li>
 </ul>    
+
+  <h2 class="lead fw-bold">Event Description</h2>
+
   <p>
     Space Telescope Science Institute’s mission is to share cutting-edge astronomy with the world. To achieve this, we must remember that the world includes people with disabilities: both scientists and the general public. During the Day of Accessibility, you will engage with the challenges around making science and technology inclusive.
   </p>
