Added welcome slides link

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@ title: "Home"
     <tr>
       <td>10:00 AM</td>
       <td>
+	<a target="_blank" href="https://drive.google.com/file/d/1yhZCBYDeXnuJ4a8c1QSuFBixB_Kt3xvT/view?usp=sharing">
 	  Welcome
+	</a>
       </td>
       <td>
 	A short introduction to the event, including overview and schedule.
