--- a/index.html
+++ b/index.html
@@ -14,56 +14,89 @@ title: "Home"
 
       </div>
       <div style="padding:0" class="col-lg-8">
-        <h1 class="display-5 fw-bold lh-1 mb-3">
+	<h1 class="display-5 fw-bold lh-1 mb-3">
 	  Day of Accessibility
-	</h1>	  
+	</h1>
 
 
-        <p class="lead">
+	<p class="lead">
 	  Hosted by Space Telescope Science Institute
 </p>
-        <p class="lead">April 13, 2023</p>
-        <p class="lead">
+	<p class="lead">April 13, 2023</p>
+	<p class="lead">
 	  10:00 AM - 4:00 PM EST
 	  </p>
-        <p class="lead">
+	<p class="lead">
 	  <a href="https://www.google.com/maps/place/Space+Telescope+Science+Institute/@39.3327417,-76.6233669,17z/data=!3m1!4b1!4m6!3m5!1s0x89c8052125fc4f7b:0xcf811ae53d5f8d2b!8m2!3d39.3327417!4d-76.6233669!16s%2Fg%2F1yp1b9fkm" target="_blank">Space Telescope Science Institute</a>, Muller Building, Bahcall Auditorium
 	</p>
 	<p>
 	  Free and open to the public. Breakfast & lunch provided. Registration required.
 	</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
-          <a href="#schedule"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
-        </div>
+	<div class="d-grid gap-2 d-md-flex justify-content-md-start">
+	  <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScoUY7GAMFjBm7khXkW4SppA3J2nmZ68c4xCjHKB9Km-idBkg/viewform?usp=sf_link"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Sign up</button></a>
+	  <a href="#schedule"><button type="button" class="btn btn-outline-secondary btn-lg px-4">View Schedule</button></a>
+	</div>
       </div>
     </div>
   </div>
 </section>
 
-<section id="description">
-  <p>
-    Event registration for the Day of Accessibility is now closed. However, the event can be streamed starting at 10 am EST with the below information:
-  </p>
-  
-  <ul>
-<li>
-<span class="fw-bold">  Streaming Link</span>: <a href="https://stsci.webex.com/stsci/j.php?MTID=m2b06a82b2fe90b115124c2c8d6d6e39b">https://stsci.webex.com/stsci/j.php?MTID=m2b06a82b2fe90b115124c2c8d6d6e39b</a>
-  </li>
+<section id="transcripts">
 
-<li>
-  <span class="fw-bold">Webinar password</span>: accessibility
-  </li>
-<li>
-<span class="fw-bold">  Join by phone</span>: +1-510-210-8882 USA toll
-  </li>
-<li>
-<span class="fw-bold">  Webinar number</span>: 2762 461 5618
-  </li>
-<li>
-<span class="fw-bold">  Access code</span>: 276 246 15618
-  </li>
-</ul>    
+  <h2 class="lead fw-bold">Transcriptions</h2>
+
+  <ul class="no-bullet-list">
+    <li>
+      <a target="_blank" href="transcripts/intro.html">
+	Session #1: Introduction
+      </a>
+
+    </li>
+
+    <li>
+      <a target="_blank" href="transcripts/notebooks_for_all.html">
+	Session #2: Notebooks for All
+      </a>
+
+    </li>
+
+    <li>
+      <a target="_blank" href="transcripts/illuminating.html">
+	Session #3: Illuminating the Universe with Accessible Text Descriptions
+      </a>
+
+    </li>
+
+    <li>
+      <a target="_blank" href="transcripts/joshua_miele.html">
+	Session #4: Keynote by Joshua Miele
+
+      </a>
+
+    </li>
+
+    <li>
+      <a target="_blank" href="transcripts/hearing_light.html">
+	Session #5: Hearing the Light with Astronomy Data Sonification
+      </a>
+
+    </li>
+
+    <li>
+      <a target="_blank" href="transcripts/screen_reader.html">
+	Session #6: Learn to Use a Screen Reader
+      </a>
+
+    </li>
+
+  </section>
+
+
+
+
+<section id="description">
+
+
 
   <h2 class="lead fw-bold">Event Description</h2>
 
@@ -92,10 +125,10 @@ title: "Home"
 
 <h2 class="lead fw-bold">Travel & Parking</h2>
 <p>
-  For those attending in person, the 
+  For those attending in person, the
   <a href="https://www.google.com/maps/place/Space+Telescope+Science+Institute/@39.3327458,-76.6255556,17z/data=!3m1!4b1!4m6!3m5!1s0x89c8052125fc4f7b:0xcf811ae53d5f8d2b!8m2!3d39.3327417!4d-76.6233669!16s%2Fg%2F1yp1b9fkm?coh=164777&entry=tt&shorturl=1" target="-blank">
     Muller Building is located at 3700 San Martin Drive, Baltimore, MD 21218</a>.
-  For more information on how to get here, please review 
+  For more information on how to get here, please review
   <a href="https://www.stsci.edu/contact-us/getting-here" target="-blank">
     this page on travel and parking</a>.
 </p>
@@ -153,14 +186,14 @@ title: "Home"
       <td>
 	Presentation from <a target="_blank" href="https://github.com/Iota-School/notebooks-for-all">Notebooks for All</a>, an STScI initiative to make Jupyter Notebook outputs more accessible.
       </td>
-      
+
     </tr>
     <tr>
       <td>10:45 AM</td>
       <td>Break</td>
       <td>
 
-      </td>	
+      </td>
     </tr>
 
     <tr>
@@ -179,7 +212,7 @@ title: "Home"
       <td>Break</td>
       <td>
 
-      </td>	
+      </td>
     </tr>
     <tr>
       <td>12:00 PM</td>
@@ -231,7 +264,7 @@ Learn to Use a Screen Reader</td>
       <td>4:00 PM</td>
       <td>Event end</td>
     </tr>
-    
+
   </tbody>
 </table>
 
@@ -264,8 +297,8 @@ Learn to Use a Screen Reader</td>
 </section>
 
 <section>
-  
-  <h2 class="display-6 fw-bold lh-1 mb-3">Contact</h2>      
+
+  <h2 class="display-6 fw-bold lh-1 mb-3">Contact</h2>
 For questions about the event, please reach out to Jennifer Kotler at jkotler@stsci.edu and/or Patrick Smyth at patrick@iotaschool.com.
 
 
